--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open Homepage.html",
-            "file": "c:\\Users\\Philipp\\Documents\\GitHub\\Wetterdaten\\Homepage.html"
+            "file": "c:\\Users\\Philipp\\Documents\\GitHub\\Verwaltung\\html\\Homepage.html"
         }
     ]
 }
